<resources>
    <string name="app_name">Sarnakh</string>
    <string name="title">Welcome to SinApp Sarnakh</string>
    <string name="loading">Loading ...</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="username_hint">username, email or student number</string>
    <string name="password_hint">" "</string>
    <string name="login">SIGN IN</string>
    <string name="en">English</string>
    <string name="fa">فارسی</string>
    <string name="keep_sign_in">Keep me Signed in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sarnakh" translatable="false">ســــــــــــــــــرنخ</string>
    <string name="username_cannot_empty">username cannot be empty</string>
    <string name="password_cannot_empty">password cannot be empty</string>
    <string name="server_error">Server Error</string>
    <string name="net_error">Network Error</string>
    <string name="check_your_connection">check internet connection, please</string>
    <string name="error">Error</string>
    <string name="user_or_pass_wrong">Username or password is wrong</string>
    <string name="_er_unknown">unknown error occurred, please try again later</string>
    <string name="calender">Calender</string>
    <string name="clazz">Class</string>
    <string name="create_class">Create class</string>
    <string name="join_class">Join class</string>
    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="appKey" translatable="false">2f7b4f95-ea95-4cd4-94ee-4e3902dc5a2c</string>
    <string name="baseUrl" translatable="false">http://c1ed4630.ngrok.io/api/v1/client</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help">About Us</string>
    <string name="join">Join</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Waiting for network …</string>
    <string name="connecting">Connecting …</string>
    <string name="base_text" />
    <string name="GOT_IT">Got it</string>
    <string name="SKIP">Skip</string>
    <string name="account">Signin / Signup</string>
    <string name="home">Home</string>
    <string name="best">B‌est</string>

    <string name="ar_api_key" translatable="false">L5o+LiuJJjIz6K0Gs0pqgSNT8E0Jwl56H9AWVR+oCAUruA4YH7UZVVD5BRgZqAgeBLoBGwuzHxIZugMeKrwAFgO3QxQFtk9bSLYMBB6+HzwPoiQTSOFcW0i3BBQPtR4SGflXLBH5DwIEvwESI78eVVCATx4Y9R4eBLodB0SoDAUEugYfSPdPVTf3TwELqQQWBK8eVVCATxULqAQUSIZBVRq3DAMMtB8aGflXLEisBBkOtBoESPdPGgu4TypG+QgPGrIfEj6yABI5rwwaGvlXGR+3AVtIsh47BbgMG0jhCxYGqAgKRqBPFR+1CRsPkgkESOE2VQOpQwQDtQwHGvUeFhi1DBwC+TBbSK0MBQO6AwMZ+VcsSLkMBAO4TypG+R0bC68LGBi2HlVQgE8WBL8fGAO/TypG+QgPGrIfEj6yABI5rwwaGvlXGR+3AVtIsh47BbgMG0jhCxYGqAgKRqBPFR+1CRsPkgkESOE2VUiGQVUcuh8eC7UZBEjhNlUIuh4eCfkwW0irARYevQIFB6hPTTH5BBgZ+TBbSL4VBwOpCCMDtggkHroAB0jhAwIGt0FVA6ghGAm6AVVQvQwbGb4QKhfu/E4S2vqO5jwVhCBf+AnT1fRIEp4OaIHE3jlOrWgDWfYDDebQKGGa40G40UBVTfHLZiVHL4rj9AjtKU6W4S0IgcWLvN6bvGBHZKpCtHDoFAv9/wz4+Cyorh4cDrPUl3E0SzPn5Q5QiNuDco0GJtL81booXbZTAUBtz9k0d+3F6cEQ3zJuWhvrrQ9xtNtyi7fG9V/sU4KZi+HpaakSUSszt46VfoG6Si8W5h+RmGrZpaQbCD9y69QIdyS1K+rCJdACNVjiC3KR/s+4gT8vvL7iYW68tTVX9JUNf5EvtCeT8g+bGMzAa7rybfvIY4/yjAnVZ9UdIZsShEFnf1Vq2213</string>
    <string name="play">PLAY</string>
    <string name="invite">Invite friend</string>


    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>


    <string name="str_short_label">Scan</string>
    <string name="str_long_label">Scan</string>
    <string name="Answer">answer</string>
    <string name="night_mode">Night Mode</string>
    <string name="price_for_one_person">price for one person</string>
    <string name="select_ticket">Select ticket</string>
    <string name="toman">Rial</string>
    <string name="quntity">Quantity :</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="flight">Flight</string>
    <string name="tour">Tour</string>
    <string name="hotel">Hotel</string>
    <string name="house">House</string>


<!--    Profile activity test string-->
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="profile">Profile</string>
    <string name="missions">Missions</string>
    <string name="ticket">Ticket</string>
    <string name="passport">Passport services</string>
    <string name="planning">Trip planning</string>
    <string name="lucky">Lucky Wheel</string>
    <string name="guide">Guide</string>
    <string name="our_team">Our Team</string>
    <string name="hossain_allahresani">Hossain Allahresani</string>
    <string name="sajjad_ahmadi">Sajjad Ahmadi</string>
    <string name="iman_ahrari">Iman Ahrari</string>
    <string name="javad_ahmadi">Javad Ahmadi</string>
    <string name="web_designer">Web Designer</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="ceo">CEO</string>
    <string name="cto">CTO</string>
    <string name="contact_us">Contact Us</string>
    <string name="mission">Mission</string>
    <string name="our_mission">Give best rewards from different contests</string>
    <string name="connect">Nothing</string>
    <string name="suggested_destinations">Suggested destinations</string>
    <string name="based_on_your_loacation">Based on your loacation</string>
    <string name="see_all">See All</string>
    <string name="ht">ماراتن برنامه نویسی هکاتوریسم ۲۰۲۰</string>

    <string name="terrible">Terrible</string>
    <string name="bad">Bad</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
</resources>
