<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
                name="viewModel"
                type="project.ui.main.help.HelpViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
        

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryBackground"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/colorSecondaryBackground"
                    android:layout_width="match_parent"
                    app:cardElevation="5dp"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="110dp"
                                    android:layout_height="110dp"
                                    android:src="@drawable/hosseyn2"
                                    app:civ_border="true"
                                    android:layout_margin="5dp"
                                    app:civ_border_color="@color/grey_10"
                                    app:civ_border_width="2dp"
                                    app:civ_shadow="true"
                                    android:scaleType="fitCenter"

                                    app:civ_shadow_radius="0" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_medium"
                                    android:text="@string/hossain_allahresani"
                                    fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                                    android:textSize="18sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_90"
                                    />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ceo"
                                    android:textSize="14sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_60"
                                    app:fontFamily="sans-serif-light" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="110dp"
                                    android:layout_height="110dp"
                                    android:src="@drawable/sajad2"
                                    app:civ_border="true"
                                    android:layout_margin="5dp"
                                    app:civ_border_color="@color/grey_10"
                                    app:civ_border_width="2dp"
                                    android:scaleType="fitCenter"
                                    app:civ_shadow="true"
                                    app:civ_shadow_radius="0" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_medium"
                                    android:text="@string/sajjad_ahmadi"
                                    fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                                    android:textSize="18sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_90"
                                    />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cto"
                                    android:textSize="14sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_60"
                                    app:fontFamily="sans-serif-light" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:layout_marginBottom="@dimen/spacing_large"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="110dp"
                                    android:layout_height="110dp"
                                    android:src="@drawable/iman2"
                                    app:civ_border="true"
                                    android:layout_margin="5dp"
                                    app:civ_border_color="@color/grey_10"
                                    app:civ_border_width="2dp"
                                    app:civ_shadow="true"
                                    android:scaleType="fitCenter"
                                    app:civ_shadow_radius="0" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                                    android:layout_marginTop="@dimen/spacing_medium"
                                    android:text="@string/iman_ahrari"
                                    android:textSize="18sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_90"
                                    />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ui_ux_designer"
                                    android:textSize="14sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_60"
                                    app:fontFamily="sans-serif-light" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="110dp"
                                    android:layout_height="110dp"
                                    android:src="@drawable/javad"
                                    app:civ_border="true"
                                    android:layout_margin="5dp"
                                    app:civ_border_color="@color/grey_10"
                                    app:civ_border_width="2dp"
                                    app:civ_shadow="true"
                                    android:scaleType="fitCenter"
                                    app:civ_shadow_radius="0" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_medium"
                                    android:text="@string/javad_ahmadi"
                                    android:textSize="18sp"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_90"
                                    />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/web_designer"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_60"
                                    android:textSize="14sp"
                                    app:fontFamily="sans-serif-light" />

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/colorSecondaryBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_large"
                        android:paddingLeft="@dimen/spacing_mlarge"
                        android:paddingRight="@dimen/spacing_mlarge"
                        android:paddingTop="@dimen/spacing_large">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mission"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_90"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:text="@string/our_mission"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/grey_60"
                            app:fontFamily="sans-serif-light" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_margin="20dp"

                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/colorSecondaryBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_large"
                        android:paddingLeft="@dimen/spacing_mlarge"
                        android:paddingRight="@dimen/spacing_mlarge"
                        android:paddingTop="@dimen/spacing_large">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/contact_us"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_90"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:text="@string/connect"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/grey_60"
                            app:fontFamily="sans-serif-light" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</layout>